Fixed a z-index issue in freelancer.css, where the modal backdrop would obscure the content. Added nokbox images to portfolio. Added another lightbox library, which I might use for video stuff.

--- a/portfolio_test/css/freelancer.css
+++ b/portfolio_test/css/freelancer.css
@@ -394,6 +394,7 @@ footer .footer-below {
     background-clip: border-box;
     -webkit-box-shadow: none;
     box-shadow: none;
+    z-index: 1050; /* added by H.S. */
 }
 
 .portfolio-modal .modal-content h2 {
